# voronota-ltr

./: .gitignore  .zenodo.json  CLAUDE.md  Cargo.toml  LICENSE  OPTIMIZATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benches/: cpp_benchmark.cpp  sasa_comparison.rs  tessellation.rs
src/: contact.rs  geometry.rs  graphics.rs  lib.rs  main.rs  python.rs  solvent_spheres.rs  spheres_container.rs  spheres_searcher.rs  subdivided_icosahedron.rs  tessellation.rs  types.rs  updateable.rs
src/input/: mmcif.rs  mod.rs  pdb.rs  radii.rs  selection.rs
tests/: centrality_golden.rs  cli.rs  cli_integration.sh  common.rs  contacts_only.rs  pdb_mmcif.rs  sasa_comparison.rs  test_python.py  updateable.rs
tests/data/: 1ctf_pdb_cells_reference.tsv  central_golden.cpp  central_golden.tsv
