[package]
name = "voronota-ltr"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Kliment Olechnovic", "Mikael Lund"]
readme = "README.md"
categories = ["science"]
homepage = "https://www.voronota.com/expansion_lt"
repository = "https://github.com/mlund/voronota-ltr"
keywords = ["voronoi", "tessellation", "molecule", "sasa", "bioinformatics"]
description = "Voronota-LT is an alternative version of Voronota for constructing tessellation-derived atomic contact areas and volumes."

[lib]
name = "voronota_ltr"
crate-type = ["cdylib", "rlib"]

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "nalgebra/serde-serialize"]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
nalgebra = "0.34"
rayon = "1.11"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
numpy = { version = "0.27", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = "0.8"
pdbtbx = "0.12"
rust-sasa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "tessellation"
harness = false

[[bench]]
name = "sasa_comparison"
harness = false
